# ai-infra-hpc

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  env.md  toc.py
01 chip/: CPU.md  GPU.md  NPU.md
01chip/: NPU.md
02 hpc/05 cuda/: readme.md
02 hpc/05 cuda/1.helloWorld/: Makefile
02 hpc/05 cuda/2.cudaProgrammingModel/: Makefile  checkDimension.cu  defineGridBlock.cu  sumArraysOnGPU-small-case.cu  sumArraysOnGPU-timer.cu  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU.cu
02 hpc/05 cuda/3.cudaExecutionModel/: 3.2.2simpleDivergence.cu  3.2.5simpleDeviceQuery.cu  3.2.7sumMatrix.cu  3.4.2reduceInteger.cu  3.6.2nestedHelloWorld.cu  3.6.3nestedReduce2.cu  3.6.3nestedReduceNosync.cu  Makefile
02 hpc/05 cuda/4.globalMemory/: Makefile  (+4 more)
02hpc/05cuda/: readme.md
03 link/02 pcie/: readme.md
03 link/03 topo/: readme.md
03 link/05 gpuDirect/: readme.md
03 link/05 interconnection/: readme.md
03 link/08 infiniband/: rdma.md
03link/01noc/: readme.md
03link/02pcie/: readme.md
03link/03topo/: readme.md
03link/05gpuDirect/: readme.md
03link/08infiniband/: rdma.md  readme.md  roce.md
05ccl/01mpi/src/: 000helloWorld.cpp  001mpiGdbDebug.cpp  100SendRecv.cpp  101SendRecvRing.cpp  CMakeLists.txt  myCCLBroadcast.cpp  myCCLGather.cpp
05ccl/02nccl/: readme.md
06 train&infer/: readme.md
06trainAndInfer/: dl.md  infer.md  readme.md
07eployment/llama.cpp/: readme.md
99industryReport/: readme.md
cuda/: readme.md
cuda/0_helloWorld/: hello.cu
cuda/2.cudaProgrammingModel/: checkDeviceInfor.cu  checkThreadIndex.cu  sumArraysOnHost.c
(+40 files in other folders)
